Fix alignment UI for upvotes

--- a/app/static/css/reviews.css
+++ b/app/static/css/reviews.css
@@ -56,7 +56,7 @@ body {
     position: absolute;
     cursor: pointer;
     color: #687074;
-    right: 100px;
+    right: 74px;
 
     outline: none !important;
     background-color: transparent;
@@ -65,11 +65,19 @@ body {
     cursor: pointer;
     overflow: hidden;
     
-    /* padding:0px 0px 20px 5px; */
-    /* width: 135px; */
-  }   
+}
 
-.vote.on {
+.vote.on_up {
 color: #f48024
+}
+.vote.on_down {
+    color: #2c44a4
+}
+
+.upvote {
+    display: inline;
+    position: absolute;
+    
+
 }
 
